# keepassxc-qt6-build

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  release-tool.py  vcpkg.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: codeql.yml  copilot-setup-steps.yml
.tx/: config
cmake/: WindowsPostInstall.cmake.in
docs/topics/: DatabaseOperations.adoc  Reference.adoc
share/linux/: appimage-apprun.sh  org.keepassxc.KeePassXC.appdata.xml
share/translations/: keepassxc_en.ts
snap/: snapcraft.yaml
src/: CMakeLists.txt  main.cpp
src/autotype/: AutoType.cpp  AutoType.h  AutoTypeMatchModel.cpp  AutoTypeMatchView.cpp  AutoTypeSelectDialog.cpp
src/autotype/xcb/: AutoTypeXCB.cpp  AutoTypeXCB.h
src/browser/: BrowserAccessControlDialog.cpp  BrowserAction.cpp  BrowserCbor.cpp  BrowserPasskeys.cpp  BrowserPasskeysConfirmationDialog.cpp  BrowserService.cpp  BrowserService.h  NativeMessageInstaller.cpp  PasskeyUtils.cpp
src/cli/: Clip.cpp  Merge.cpp  Utils.cpp  keepassxc-cli.cpp
src/core/: AutoTypeAssociations.cpp  Base32.cpp  Bootstrap.cpp  Config.cpp  Config.h  Database.cpp  Entry.cpp  EntryAttachments.cpp  Global.h  Group.cpp  Merger.cpp  Metadata.cpp  PasswordGenerator.cpp  PasswordHealth.cpp  Tools.cpp  Tools.h  Translator.cpp
src/crypto/: SymmetricCipher.h
src/crypto/kdf/: Argon2Kdf.cpp
src/fdosecrets/dbus/: DBusDispatch.cpp  DBusMgr.h
src/fdosecrets/objects/: Item.cpp
src/fdosecrets/widgets/: AccessControlDialog.cpp  SettingsModels.cpp
src/format/: BitwardenReader.cpp  CsvParser.cpp  Kdbx4Writer.cpp  KdbxXmlReader.cpp  KdbxXmlWriter.cpp  KeePass1Reader.cpp  KeePass1Reader.h  KeePass2RandomStream.cpp  OPUXReader.cpp  OpVaultReaderAttachments.cpp  ProtonPassReader.cpp
src/gui/: ApplicationSettingsWidget.cpp  DatabaseOpenDialog.cpp  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseTabWidget.cpp  DatabaseTabWidget.h  DatabaseWidget.cpp  DatabaseWidget.h  EntryPreviewWidget.cpp  EntryPreviewWidget.h  Font.cpp  IconDownloaderDialog.cpp  IconModels.cpp  Icons.cpp  MainWindow.cpp  MergeDialog.cpp  MessageBox.cpp  PasswordGeneratorWidget.cpp  ShortcutSettingsPage.cpp  SortFilterHideProxyModel.cpp  TotpSetupDialog.cpp  UpdateCheckDialog.cpp  UrlTools.cpp  UrlTools.h
src/gui/csvImport/: CsvImportWidget.cpp
src/gui/dbsettings/: DatabaseSettingsDialog.cpp  DatabaseSettingsWidgetBrowser.cpp
src/gui/entry/: EditEntryWidget.cpp  EditEntryWidget.h  EntryAttachmentsWidget.cpp  EntryAttributesModel.cpp  EntryHistoryModel.cpp  EntryModel.cpp  EntryURLModel.cpp  EntryView.cpp
src/gui/entry/attachments/: TextAttachmentsPreviewWidget.cpp  TextAttachmentsPreviewWidget.h
src/gui/group/: EditGroupWidget.cpp  GroupModel.cpp
src/gui/osutils/macutils/: MacPasteboard.cpp  MacUtils.h
src/gui/osutils/nixutils/: NixUtils.cpp  NixUtils.h
src/gui/osutils/winutils/: DeviceListenerWin.cpp  WinUtils.cpp  WinUtils.h
src/gui/passkeys/: PasskeyExportDialog.cpp
src/gui/remote/: RemoteProcess.cpp
src/gui/reports/: ReportsDialog.cpp  ReportsDialog.h  ReportsWidgetBrowserStatistics.cpp  ReportsWidgetHibp.cpp  ReportsWidgetHibp.h
src/gui/styles/base/: BaseStyle.cpp
src/gui/tag/: TagsEdit.cpp
src/gui/wizard/: ImportWizardPageReview.cpp
src/keeshare/: KeeShareSettings.cpp  ShareExport.cpp  ShareImport.cpp  ShareObserver.cpp
src/keys/: FileKey.cpp
src/keys/drivers/: YubiKey.cpp  YubiKey.h  YubiKeyInterfacePCSC.cpp
src/quickunlock/: PolkitDbusTypes.h  TouchID.mm
src/sshagent/: KeeAgentSettings.cpp  OpenSSHKey.cpp  OpenSSHKeyGen.cpp  SSHAgent.cpp
src/streams/: SymmetricCipherStream.cpp
tests/: CMakeLists.txt  TestAutoType.cpp  TestCli.cpp  TestCsvParser.cpp  TestDatabase.cpp  TestEntryModel.cpp  TestEntrySearcher.cpp  TestFdoSecrets.cpp  TestGroup.cpp  TestGroupModel.cpp  TestImports.cpp  TestKeePass1Reader.cpp  TestKeePass1Reader.h  TestMerge.cpp  TestModified.cpp  TestPasskeys.cpp  TestSSHAgent.cpp  TestSymmetricCipher.cpp  TestTools.cpp  modeltest.cpp
tests/data/: protonpass_export.json
tests/gui/: CMakeLists.txt  TestGui.cpp  TestGuiBrowser.cpp  TestGuiFdoSecrets.cpp  TestGuiFdoSecrets.h  TestGuiPixmaps.cpp
tests/gui/attachments/: TestAttachmentsGui.cpp  TestEditEntryAttachmentsDialog.cpp  TestImageAttachmentsView.cpp  TestPreviewEntryAttachmentsDialog.cpp  TestTextAttachmentsEditWidget.cpp  TestTextAttachmentsPreviewWidget.cpp  TestTextAttachmentsWidget.cpp
utils/fuzz-testing/: README.md
